@@ -1,3 +1,9 @@
+2007-09-17  Jonh Wendell  <jwendell@gnome.org>
+
+	* src/vinagre-tab.c,
+	* src/vinagre-window.c:
+	  - Show tabs in fullscreen mode when ungrab the pointer.
+
 2007-09-13  Jonh Wendell  <jwendell@gnome.org>
 
 	* configure.ac,
